write a first draft of a preface

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -145,26 +145,58 @@
 
 \section*{Preface}
 
-\todo{Write a preface explaining the motivation, format of the
-  commentary, and so on.  Things to mention: classic work. Worthwhile
-  read, even given subsequent developments like BLL. Even I learned
-  new things and new perspectives from reading it.  Theory of species
-  opens up relationships between combinatorics and CS, algebraic data
-  types etc.
+This is the paper by Joyal that introduced the concept of
+\emph{combinatorial species}, as a way to unify and generalize the
+existing theory of generating functions.  It was one of the first
+attempts to apply category theory to combinatorics---now a proven
+combination.
 
-  Inaccessible to many because of (1) language, (2) audience.  (1)
-  easily enough addressed.  Have updated diagrams etc., typeset
-  everything in LaTeX as well. As for (2), originally written for
-  mathematicians. I've added commentary with additional explanation
-  and examples.  Especially concerned to make it accessible to those
-  in the CS world.  Show how commentary is typeset.
+During the course of researching my PhD dissertation on the
+intersection of combinatorial species and programming languages, I
+read a lot of secondary literature on species and assumed that would
+have to be enough, since I do not read French---the language in which
+Joyal's paper was written.  However, I eventually came across some
+questions to which I could not find answers, only to be told that the
+answers were already in Joyal's paper!  Somewhat reluctantly I found a
+copy and began trying to read it, whereupon I discovered several
+surprising things.
 
-  Contribution/collaboration welcome.  Could particularly use help
-  with translation; I don't actually know any French.  Explain my
-  philosophy in translating: italics, etc. Add link to
-  original. Contributions to commentary are also welcome.  Helpful
-  even just to read and say which parts you find particularly hard to
-  understand, so I know to add some commentary.}
+First of all, reading mathematical French is not too difficult, even
+for someone who does not know any French, especially if one already
+understands the math---although it is certainly slow going.  Second,
+it turns out that Joyal's is a fantastic paper full of interesting
+ideas and examples which did not appear in any of the secondary
+literature.
+
+I am excited to bring this work to the attention of the functional
+programming languages community, but there are two barriers to it
+being more widely accessible in that context: the language barrier is
+the obvious one, but more importantly, it assumes a lot of background
+knowledge (in mathematics in general and combinatorics in particular)
+which many people in the programming languages community may not
+have.  To address the first barrier, I decided to produce an English translation---to address the first
+barrier---and to add commentary, examples, and code to address the
+second.  The commentary will be typeset like this:
+\begin{commentary}
+  This is some commentary.
+\end{commentary}
+This is a long-term project; I do not know how long it will take to
+finish, but plan to work on it slowly and steadkly.  Collaboration and
+contributions are welcome!  Things I could particularly use help with:
+\begin{itemize}
+\item Translation.  If you know both French and English well, I would
+  love more eyes on the translation.  There are particular places
+  where I am not sure about the translation, which I have indicated
+  \trans{like this}{comme \c{c}a}.  However, you need not limit
+  yourself to looking at those places; all of the translation could
+  use checking.
+\item Commentary. I would of course be happy to receive contributions
+  of additional commentary; but even (especially!) if you are not an
+  expert, an incredibly helpful way you can contribute is simply to
+  try reading the translation and commentary, and let me know of any
+  parts you find confusing or unclear---that will be a signal that the
+  commentary needs to be clarified, or more commentary added.
+\end{itemize}
 
 \newpage
 
