note about publishing

--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -198,6 +198,10 @@ contributions are welcome!  Things I could particularly use help with:
   commentary needs to be clarified, or more commentary added.
 \end{itemize}
 
+I am also interested to eventually publish this somehow---if you
+represent an interested publisher, or have a recommendation of a
+suitable one, please let me know!
+
 \newpage
 
 \title{A combinatorial theory of formal series}
