--- a/series-formelles.tex
+++ b/series-formelles.tex
@@ -212,7 +212,9 @@ suitable one, please let me know!
 \subsection*{Technical details}
 \label{sec:tech-details}
 
-\todo{OCR (tesseract) -> Google translation toolkit. LaTeX. diagrams.}
+The original paper is available only in a scanned form, so as a first
+step I ran it through the tesseract OCR engine
+(\url{https://github.com/tesseract-ocr/tesseract}). \todo{Google translation toolkit. LaTeX. diagrams.}
 
 \newpage
 
@@ -1414,7 +1416,6 @@ different ones.
 Functoriality is embedded in the definition of an \emph{echelon
   construction} on page 2:
 
-\begingroup
 \end{commentary}
 
 \end{document}
